--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">demoapp</string>
+    <string name="back">返回键</string>
+    <string name="order_manage">工单管理</string>
 </resources>
