--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">demoapp</string>
     <string name="back">返回键</string>
     <string name="order_manage">工单管理</string>
+    <string name="service_manage">服务管理</string>
 </resources>
