--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="order_manage">工单管理</string>
     <string name="service_manage">服务管理</string>
     <string name="new_service">新增服务</string>
-    <string name="select_org">机构选择</string>
+    <string name="select_org">派单</string>
 </resources>
