--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
-    <string name="app_name">demoapp</string>
-    <string name="back">返回键</string>
-    <string name="order_manage">工单管理</string>
-    <string name="service_manage">服务管理</string>
-    <string name="new_service">新增服务</string>
-    <string name="select_org">派单</string>
+	<string name="app_name">demoapp</string>
+	<string name="back">返回键</string>
+	<string name="order_manage">工单管理</string>
+	<string name="service_manage">服务管理</string>
+	<string name="new_service">新增服务</string>
+	<string name="select_org">派单</string>
+	<string name="staff_manage">人员管理</string>
 </resources>
